--- a/src/app/pages/collections/create/pickup.component.html
+++ b/src/app/pages/collections/create/pickup.component.html
@@ -1,29 +1,8 @@
 <block-ui>
   <div class="box box-primary">
     <div class="box-body">
-      <!-- <div class="row mb-4" *ngIf="currentActive === 'DISABLED'">
-        <div class="col">
-          <div class="card border-0 box-shadow" widget="">
-            <div class="card-header transparent border-0 text-muted">
-              <h5 class="mb-0">Access Denied</h5>
-            </div>
-            <div class="card-block pt-0 widget-body">
-              <div class="row">
-                <div class="col-xl-12">
-                  <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <button aria-label="Close" class="close" data-dismiss="alert" type="button">
-                      <span aria-hidden="true">×</span>
-                    </button>
-                    <strong>Error!</strong> You Do not have access to this page.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
       <div widget class="card border-0 box-shadow">
-        <div id="cccform" class="container">
+        <div *ngIf="!fsubmitted">
 
           <div class="row form-heading">
             <div class="col-md-1"></div>
@@ -165,104 +144,30 @@
           </div>
 
 
-          <div class="panel-body" *ngIf="fsubmitted">
-
-            Heee
-
-
-            <!--form class="form-horizontal" name="cccform" onsubmit="return sendData();" role="form" method="POST" title=""
-        enctype="multipart/form-data" style="display: block;">
-        <div class="row form-group">
-          <label class="control-label col-sm-3" for="title">Customer Id Number:</label>
-          <div class="col-sm-4">
-            <input type="text" name="idnumber" id="idnumber" class="form-control required" maxlength="255"
-              placeholder="enter customer id number">
-          </div>
-          <div class="col-sm-2">
-            <button type="button" name="request" value="Request" onclick="requestCollectionCode()"
-              class="btn-primary btn-sm btn-info ">Request Code</button>
-          </div>
-        </div>
-
-        <div class="row form-group untilCodeisReceived ccc" style="display: none">
-          <label class="control-label col-sm-3" for="title">Collection Code:</label>
-          <div class="col-sm-4" title="enter customer collection code received on customer's phone">
-            <input type="text" name="ccc" id="ccc" class="form-control required" maxlength="255"
-              placeholder="enter customer collection code received on customer's phone">
-          </div>
-          <div class="col-sm-2">
-            <button type="button" name="request" value="Confirm" onclick="confirmCollectionCode()"
-              class="btn-primary btn-sm btn-info ">Confirm Code</button>
-          </div>
-        </div>
-
-        <div class="row form-group untilCodeisReceived response" style="display: none">
-          <label class="control-label col-sm-3" for="description">Confirmation Response:</label>
-          <div class="col-sm-4">
-            <span id="confirmation_response"></span>
-          </div>
-        </div>
-
-        <div class="row form-group untilCodeisReceived" style="display: none">
-          <label class="control-label col-sm-3" for="DOB">Customer:</label>
-          <div class="col-sm-4">
-            <span id="confirmation_customer"></span>
-          </div>
-        </div>
-        <div class="row form-group untilCodeisReceived" style="display: none">
-          <label class="control-label col-sm-3" for="DOB">Item(s):</label>
-          <div class="col-sm-4">
-            <span id="confirmation_item"></span>
-          </div>
-        </div>
-
-        <div class="row form-group untilCodeisReceived" style="display: none">
-          <label class="control-label col-sm-3" for="DOB">Approved Amount:</label>
-          <div class="col-sm-4">
-            <span id="confirmation_approvedamount"></span>
-          </div>
-        </div>
-
-        <div class="row form-group untilCodeisReceived" style="display: none">
-          <label class="control-label col-sm-3" for="title">Item identification:</label>
-          <div class="col-sm-4">
-            <input type="text" name="itemid" id="itemid" class="form-control required" maxlength="255"
-              placeholder="enter item id/serial number">
-          </div>
-        </div>
-
-        <div class="row form-group untilCodeisReceived" style="display: none">
-          <label class="control-label col-sm-3" for="title">Dispatch Notes:</label>
-          <div class="col-sm-4">
-            <textarea name="notes" id="notes" class="form-control required" maxlength="255"
-              placeholder="enter dispatch notes"></textarea>
-          </div>
 
         </div>
 
-        <div class="row form-group untilCodeisReceived" style="display: none">
-          <label class="control-label col-sm-3" for="email"></label>
-          <div class="col-sm-7">
 
-            <input type="button" onclick="sendData()" value="Save" class="btn-primary btn-sm btn-success ">
-            <button type="button" name="cancel" value="Cancel" onclick="closeForm()"
-              class="btn-primary btn-sm btn-danger ">Cancel</button>
-            <input type="hidden" name="cell" />
-          </div>
-        </div>
+        <div class="panel-body" *ngIf="fsubmitted">
+          <div>
+            <div class="alert alert-lg alert-success">
+              <h3>We have successfully saved the pickup <i class="fa fa-check"></i></h3>
+              <p>
+                <a class="btn btn-md btn-success" routerLink="/collections/create"> Next Customer Pickup
+                </a>
+              </p>
+              <p>
+                <a class="btn btn-md btn-success" routerLink="/collections/lipalater"> Next Lipalater Pickup
+                </a>
+              </p>
+              <p>
+                <a class="btn btn-md btn-success" routerLink="/sales-menu/released"> View Released Items
+                </a>
+              </p>
+            </div>
 
-        <div class="row form-group ">
-          <label class="control-label col-sm-3" for="email">Sample Results</label>
-          <div class="col-sm-7">
-            <input type="button" onclick="toggleValid('3HGRET4BB')" value="Valid" class="btn-sm btn-success ">
-            <button type="button" name="cancel" value="Cancel" onclick="toggleInvalid()"
-              class="btn-sm btn-danger ">Invalid</button>
-            <input type="hidden" name="cell" />
           </div>
-        </div>
 
-      </form -->
-          </div>
         </div>
       </div>
     </div>
