modified partner infor view to make it look better

--- a/src/app/pages/partners/partners.component.html
+++ b/src/app/pages/partners/partners.component.html
@@ -59,11 +59,11 @@
               <td colspan="7">
                 <p>
                   <div>
-                    <div class="row form-heading">
+                    <div class="row dash-header">
 
                       <h5 class="col-md-11">View Selected Partner Information</h5>
                     </div>
-                    <hr>
+
 
                     <table>
 
@@ -104,7 +104,7 @@
                       </tr>
                     </table>
 
-
+                    <hr>
 
                     <dl>
                       <dt></dt>
