added missing refresh button on pending list

--- a/src/app/pages/pending/pending.component.html
+++ b/src/app/pages/pending/pending.component.html
@@ -24,7 +24,10 @@
 
       <div class="widget-controls row">
         <div class="col-sm-3">
-          <span class="dash-header"> Items Awaiting Collection</span>
+          <!-- <span class="dash-header"> Items Awaiting Collection</span> -->
+          <button class="btn btn-info" type="button" (click)="downloadApps()">
+            <i class="fa fa-refresh"></i> Fetch Recents Items
+          </button>
 
         </div>
         <div class="col-sm-3">
